--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 
 <head>
       <meta charset="utf-8">
+      <meta name="description" content="DonRico Nelson's personal web site at sam houston university">
+      <meta name="keywords" content="=DonRico Nelson Jr, Junior at Sam Houston State">
       <title>DonRicoNelsonJr.github.io</title>
-
 </head>
+    <body>
+        <header>
+            <img src="images/me.PNG" alt="Rico's picture" width="100" height="100">
+        </header>
+    <main>
+        <h1> welcome to my web site </h1>
+        <h2>DonRicoNelsonJr.github.io</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum aut a quis earum hic vel maxime odio rerum vitae. Qui maiores ipsam nemo necessitatibus ea blanditiis! Facilis possimus iste nesciunt.</h3>
+        <nav>
+            <ul>
+                <li>Education =</li>
+                <li>Work Experience</li>
+                <li>Certificationa</li>
+                <li>Knowledge and Skill</li>
+                <li><a href="#">Class Projects</a></li>
 
-<Body>
-    <h1> welcome to my web site </h1>
-</Body>
+            </ul>
+        </nav>
+        <p>Click here to download my <a href="files/How to set up GitHub and VS Code.docx">my resume</a>.</p>
+        <p>Click here to go to <a href="https://www.linkedin.com/" target="_blank">my linkdin profile</a></p>
+     </main>
+
+    </Body>
 </html>
