--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
 
             </ul>
         </nav>
-        <p>Click here to download my <a href="files/How to set up GitHub and VS Code.docx">my resume</a>.</p>
+        <p>Click here to download my <a href="files/HowtosetupGitHubandVSCode.docx">my resume</a>.</p>
         <p>Click here to go to <a href="https://www.linkedin.com/" target="_blank">my linkdin profile</a></p>
-     </main>
+        <p> To contact me at <em> <a href="mailto:dmn024@shsu"></a></em></p>
+        
+    </main>
+     <br> <Hr>
+        <footer>
+              <p> &copy; CopyRight2022</p>
+        </footer>
 
-    </Body>
+        </Body>
 </html>
+        
