--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             </ul>
         </nav>
-        <p>Click here to download my <a href="files/HowtosetupGitHubandVSCode.docx">my resume</a>.</p>
+        <p>Click here to download my <a href="files/Week4.docx">my resume</a>.</p>
         <p>Click here to go to <a href="https://www.linkedin.com/" target="_blank">my linkdin profile</a></p>
         <p> To contact me at <em> <a href="mailto:dmn024@shsu"></a></em></p>
         
