--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="shadow">DonRico Nelson's homepage</h1>
             <h2 class="shadow">Nelson.github.io</h2>
         </header>
-    <main>
+ <main>
             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum aut a quis earum hic vel maxime odio rerum vitae. Qui maiores ipsam nemo necessitatibus ea blanditiis! Facilis possimus iste nesciunt.</h3>
         <nav>
             <ul id="List">
@@ -29,12 +29,14 @@
                 <li><a href="#">Class Projects</a></li>
 
             </ul>
-        </nav>
+        </nav> 
+     <div class="contact">
+     
         <p>Click here to download my <a href="files/Week4.docx">my resume</a>.</p>
         <p>Click here to go to <a href="https://www.linkedin.com/" target="_blank">my linkdin profile</a></p>
-        <p> To contact me at <em> <a href="mailto:dmn024@shsu"></a></em></p>
-        
-    </main>
+        <p>To contact me at <em> <a href="mailto:dmn024@shsu">dmn024@shsu</a></em></p>
+     </div>
+</main>
      <br> <Hr>
         <footer>
               <p class="copyright">&copy; CopyRight2022</p>
