--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
                 <li>Education </li>
                 <li>Work Experience</li>
-                <li>Certificationa</li>
+                <li>Certificationan</li>
                 <li>Knowledge and Skill</li>
                 <li><a href="#">Class Projects</a></li>
 
