--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Work Experience</li>
                 <li>Certification</li>
                 <li>Knowledge and Skill</li>
-                <li><a href="#">Class Projects</a></li>
+                <li><a href="projects.html">Class Projects</a></li>
 
             </ul>
         </nav> 
