--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
               <p class="copyright">&copy; CopyRight2022</p>
                
         </footer>
-        p
+    <p class="fixed">Contact me at dmn024@shsu.edu</p>
         </Body>
 </html>
         
