--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         <aside>
             <h4>References</h4>
             <ol>
-                <li><a href="http://www.w3schools.com"> w3schools</a></li>
+                <li><a href="http://www.w3schools.com"> W3schools</a></li>
                 <li><a href="http://developer.mozilla.org"> Mozilla</a></li>
                 <li><a href="https://learn.microsoft.com/en-us/"> Microsoft</a></li>
 
