--- a/styles/rwd.html
+++ b/styles/rwd.html
@@ -1,2 +1,41 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+<link rel="stylesheet" href="styles/rwd.css"/>
+<section class="top-nav"> 
+    <div>
+        <p>DonRico</p>	
+      </div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class='menu-button-container' for="menu-toggle">
+      <div class='menu-button'></div>
+      </label>
+<ul class="menu"> 
+    <ol>
+        <li><a href="styles/rwd.html"> Current</a></li>
+        <li><a href="files/week4.docx" target="_blank"> The Resume</a></li>
+        <li><a href="#"> Projects</a></li>
+        <li><a href="#"> Experiments</a></li>
+        <li><a href="#"> Current</a></li>
 
+    </ol>
+<article>
+    <h2> About Me</h2>
+    <img src="images/me.PNG" alt="Rico's picture" width="100" height="100">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloribus eum maiores exercitationem sunt unde tempora libero sit excepturi perferendis ipsa repudiandae neque odio laborum sint dolore placeat cupiditate numquam vitae nam minus, omnis iusto ea nostrum? Ea facere deleniti iure sed nobis expedita commodi possimus explicabo sint culpa maiores, aliquid minus quo ipsam, quaerat corporis distinctio quod doloribus iusto dignissimos cupiditate sunt eveniet ducimus delectus! Vitae animi commodi nobis reprehenderit aut odit pariatur similique est officiis culpa. Ratione, voluptatem. Unde, accusamus. Excepturi, sapiente illum, sit autem molestiae adipisci nesciunt repudiandae magnam accusamus vitae officiis sed consectetur alias cum quibusdam.</p>
+</article>
+<footer>
+    <p class="copyright">&copy; CopyRight2022 DonRico</p>
+    <li><a href="http://www.linkedin.com"> Linkedin</a></li>
+
+     
+</footer>
