--- a/rwd.html
+++ b/rwd.html
@@ -5,29 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/rwd.css"/>
+    <link rel="stylesheet" href="styles/rwd.css">
 </head>
 <body>
     
 </body>
 </html>
-<section class="top-nav"> 
+<section class="top-nav">
     <div>
         <p>DonRico</p>	
       </div>
-      <input id="menu-toggle" type="checkbox" />
+      <input id="menu-toggle" type="checkbox">
       <label class='menu-button-container' for="menu-toggle">
       <div class='menu-button'></div>
       </label>
-<ul class="menu"> 
-    <ol>
+    <ul class="menu"> 
         <li><a href="styles/rwd.html"> Current</a></li>
         <li><a href="files/week4.docx" target="_blank"> The Resume</a></li>
         <li><a href="#"> Projects</a></li>
         <li><a href="#"> Experiments</a></li>
         <li><a href="#"> Current</a></li>
-
-    </ol>
+    </ul>    
+</section>
 <article>
     <h2> About Me</h2>
     <img src="images/me.PNG" alt="Rico's picture" width="100" height="100">
