--- a/form.html
+++ b/form.html
@@ -82,12 +82,25 @@
         <label for="engine3">E-Mail</label><br><br>
         <input type="radio" name="engine" id="engine4" value="Friend" checked>
         <label for="engine4">Friend or Collegue</label><br>
-
-
+    </fieldset>
+    
+    <fieldset>
+        Comments:<br>
+     <textarea id="comments"
+       placeholder="If you have any comments,
+                 please enter them here.">
+     </textarea>
     </fieldset>
 
-
-
+    <fieldset>
+    <fieldset id="buttons">
+        <legend>Submit Your Membership</legend>
+        <label>&nbsp;</label>
+        <input type="submit" id="submit" value="Submit">
+        <input type="reset" id="reset" value="Reset Fields"><br>
+    </fieldset>
+    </form>
+    
 
 </body>
 </html>
